# aiohuesyncbox

./: .gitignore  README.md  README.rst  bump_version.sh  example.py  example_zeroconf.py  pyproject.toml  requirements.txt  setup.py  zeroconf_example.py
.github/workflows/: python-package.yml  python-publish.yml
aiohuesyncbox/: __init__.py  behavior.py  device.py  errors.py  execution.py  hdmi.py  helpers.py  hsb_cacert.pem  hsb_cacert.py  hue.py  huesyncbox.py
