[build-system]
requires = ["setuptools>=62.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
aiohuesyncbox = ["py.typed"]

[tool.setuptools.packages.find]
include = ["aiohuesyncbox*"]


[project]
name = "aiohuesyncbox"
version = "0.0.30"
description = "Asyncio package to communicate with a Philips Hue Play HDMI Sync Box."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "Michel van de Wetering", email = "michel.van.de.wetering@gmail.com" },
]
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["aiohttp>=3.9.0,<4"]

urls = { Homepage = "https://github.com/mvdwetering/aiohuesyncbox" } 

[project.optional-dependencies]
test = [
  "mypy==1.11.0",
  "ruff==0.5.5",
]